# libcamera-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  controls  controls_generated.h  flake.nix  regenerate.sh  rustfmt.toml
.github/workflows/: ci.yaml
libcamera/: Cargo.toml  build.rs
libcamera-meta/: Cargo.toml  README.md
libcamera-meta/examples/: generate_c.rs
libcamera-meta/src/: lib.rs
libcamera-rs/: Cargo.toml
libcamera-rs/examples/: capture_video.rs  jpeg_capture.rs  list_cameras.rs  simple.rs  video_capture.rs
libcamera-rs/src/: camera.rs  camera_manager.rs  control.rs  control_value.rs  controls.rs  controls_generated.rs  framebuffer.rs  framebuffer_allocator.rs  framebuffer_map.rs  generated.rs  geometry.rs  lib.rs  pixel_format.rs  request.rs  stream.rs  utils.rs
libcamera-sys/: Cargo.toml  build.rs
libcamera-sys/c_api/: camera.cpp  camera.h  camera_manager.cpp  camera_manager.h  controls.cpp  controls.h  controls_generated.h  framebuffer.cpp  framebuffer.h  framebuffer_allocator.cpp  framebuffer_allocator.h  geometry.cpp  geometry.h  libcamera_ids.hpp  logging.cpp  logging.h  pixel_format.cpp  pixel_format.h  request.cpp  request.h  signal.h  stream.cpp  stream.h  version.h
libcamera-sys/examples/: version.rs
libcamera-sys/src/: lib.rs
libcamera/examples/: camera_control_id_info.rs  camera_control_info.rs  cameras_iter.rs  jpeg_capture.rs  list_cameras.rs  logging.rs  read_control.rs  video_capture.rs
libcamera/src/: camera.rs  camera_manager.rs  control.rs  control_value.rs  framebuffer.rs  framebuffer_allocator.rs  framebuffer_map.rs  generated.rs  geometry.rs  lib.rs  logging.rs  pixel_format.rs  request.rs  stream.rs  utils.rs
libcamera/versioned_files/0.0.1/: controls.rs  properties.rs
libcamera/versioned_files/0.0.2/: controls.rs  properties.rs
libcamera/versioned_files/0.0.3/: controls.rs  properties.rs
libcamera/versioned_files/0.0.4/: properties.rs
libcamera/versioned_files/0.0.5/: controls.rs
libcamera/versioned_files/0.1.0/: controls.rs  properties.rs
libcamera/versioned_files/0.2.0/: controls.rs
libcamera/versioned_files/0.3.0/: controls.rs
libcamera/versioned_files/0.3.1/: controls.rs  properties.rs
libcamera/versioned_files/0.3.2/: controls.rs
libcamera/versioned_files/0.4.0/: controls.rs  properties.rs
libcamera/versioned_files/0.5.0/: controls.rs  properties.rs
libcamera/versioned_files/0.5.1/: controls.rs  properties.rs
libcamera/versioned_files/0.5.2/: controls.rs
