[package]
name = "libcamera-sys"
version = "0.3.0"
edition = "2021"
description = "Low-level unsafe bindings to libcamera"
documentation = "https://docs.rs/libcamera-sys"
repository = "https://github.com/lit-robotics/libcamera-rs"
license = "MIT OR Apache-2.0"
keywords = ["libcamera", "camera"]
categories = ["external-ffi-bindings", "computer-vision", "multimedia"]
readme = "../README.md"

[lib]
# libcamera comments are interpreted as rust code blocks failing the doctest
doctest = false

[dependencies]

[build-dependencies]
bindgen = "0.70"
pkg-config = "0.3"
cc = "1"
