[package]
name = "libcamera"
version = "0.2.1"
edition = "2021"
description = "Safe Rust bindings for libcamera"
documentation = "https://docs.rs/libcamera"
repository = "https://github.com/lit-robotics/libcamera-rs"
license = "MIT OR Apache-2.0"
keywords = ["libcamera", "camera"]
categories = ["api-bindings", "computer-vision", "multimedia"]
readme = "../README.md"

[dependencies]
bitflags = "2.0.0-rc.2"
drm-fourcc = "2.2"
libc = "0.2"
libcamera-sys = { path = "../libcamera-sys", version = "0.2.1" }
num_enum = "0.6.1"
smallvec = "1.10"
thiserror = "1.0"
